--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <h1>The Big Picture</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
+                <p>THIS IS A TEST, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
             </div>
         </div>
         <!-- /.row -->
