--- a/services.html
+++ b/services.html
@@ -40,13 +40,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">The Big Picture</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                    	<li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">Find</a>
                     </li>
                     <li>
                         <a href="services.html">Services</a>
