--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                                 center: {lat: 44.540, lng: -78.546},
                                 zoom: 8
                             });
+
+                                // NOTE: This uses cross-domain XHR, and may not work on older browsers.
+                                map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
                         }
                 </script>
                 <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
