--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="about.html">Rate</a>
+                        <a href="#">Rate</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="#">Services</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="#">Contact</a>
                     </li>
                 </ul>
             </div>
