--- a/services.html
+++ b/services.html
@@ -66,7 +66,12 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <h1>The Big Picture</h1>
-                <p>THIS IS A TEST, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
+		        <form action="/cgi-bin/hello_get.py" method="get">
+	First Name: <input type="text" name="first_name">  <br />
+
+	Last Name: <input type="text" name="last_name" />
+	<input type="submit" value="Submit" />
+	</form>
             </div>
         </div>
         <!-- /.row -->
