Change Map Size
Change Map Size Test

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <![endif]-->
     
     <!-- The Map stuff goes here -->
-    <style>
-      #map {
-        width: 500px;
-        height: 400px;
-      }
+
+    <style type="text/css">
+        html, body { height: 100%; margin: 0; padding: 0; }
+        #map { height: 100%; }
+
     </style>
 
 </head>
