roll back the index

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <![endif]-->
     
     <!-- The Map stuff goes here -->
-
-    <style type="text/css">
-        html, body { height: 50%; margin: 0; padding: 0; }
-        #map { height: 50%; }
-
+    <style>
+      #map {
+        width: 500px;
+        height: 400px;
+      }
     </style>
 
 </head>
