--- a/index.html
+++ b/index.html
@@ -77,22 +77,14 @@
                     <div id="map"></div>
                     <script>
                             var map;
-                            function initMap() {
+                            function initMap(position) {
+                            var latitude  = position.coords.latitude;
+                            var longitude = position.coords.longitude;
                             var mapDiv = document.getElementById('map');
-                            var map = new google.maps.Map(mapDiv, {
-                                center: {lat: 44.540, lng: -78.546},
-                                zoom: 8
-                            });
+
                             // Try HTML5 geolocation.
                             if (navigator.geolocation) {
                                 navigator.geolocation.getCurrentPosition(function(position) {
-                                    var pos = {
-                                        lat: position.coords.latitude,
-                                        lng: position.coords.longitude
-                                    };
-                                    infoWindow.setPosition(pos);
-                                    infoWindow.setContent('Location found.');
-                                    map.setCenter(pos);
                                 }, function() {
                                     handleLocationError(true, infoWindow, map.getCenter());
                                 });
@@ -100,8 +92,10 @@
                             // Browser doesn't support Geolocation
                             handleLocationError(false, infoWindow, map.getCenter());
                         }
-
-
+                                var map = new google.maps.Map(mapDiv, {
+                                    center: {lat: latitude, lng: longitude},
+                                    zoom: 8
+                                });
                                 // NOTE: This uses cross-domain XHR, and may not work on older browsers.
                                 map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
                             }
