--- a/services.html
+++ b/services.html
@@ -77,6 +77,7 @@
 			<option VALUE="LOCATIONNAME">Location</option>
 			<option VALUE="RATING">Rating</option>
 		</select>
+		<input type="submit">
 		</form>
 		
 		
