--- a/index.html
+++ b/index.html
@@ -77,28 +77,41 @@
                     <div id="map"></div>
                     <script>
                             var map;
-                            function initMap(position) {
-                            var latitude  = position.coords.latitude;
-                            var longitude = position.coords.longitude;
-                            var mapDiv = document.getElementById('map');
+                            function initMap() {
+                                var map = new google.maps.Map(document.getElementById('map'), {
+                                    center: {lat: -34.397, lng: 150.644},
+                                    zoom: 9
+                                });
+                                var infoWindow = new google.maps.InfoWindow({map: map});
 
-                            // Try HTML5 geolocation.
-                            if (navigator.geolocation) {
-                                navigator.geolocation.getCurrentPosition(function(position) {
-                                }, function() {
-                                    handleLocationError(true, infoWindow, map.getCenter());
-                                });
-                            } else {
-                            // Browser doesn't support Geolocation
-                            handleLocationError(false, infoWindow, map.getCenter());
-                        }
-                                var map = new google.maps.Map(mapDiv, {
-                                    center: {lat: latitude, lng: longitude},
-                                    zoom: 8
-                                });
-                                // NOTE: This uses cross-domain XHR, and may not work on older browsers.
+                                // Try HTML5 geolocation.
+                                if (navigator.geolocation) {
+                                    navigator.geolocation.getCurrentPosition(function(position) {
+                                        var pos = {
+                                            lat: position.coords.latitude,
+                                            lng: position.coords.longitude
+                                        };
+
+                                        infoWindow.setPosition(pos);
+                                        infoWindow.setContent('Your Here.');
+                                        map.setCenter(pos);
+                                    }, function() {
+                                        handleLocationError(true, infoWindow, map.getCenter());
+                                    });
+                                } else {
+                                    // Browser doesn't support Geolocation
+                                    handleLocationError(false, infoWindow, map.getCenter());
+                                }     // NOTE: This uses cross-domain XHR, and may not work on older browsers.
                                 map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
                             }
+
+                            function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                                infoWindow.setPosition(pos);
+                                infoWindow.setContent(browserHasGeolocation ?
+                                        'Error: The Geolocation service failed.' :
+                                        'Error: Your browser doesn\'t support geolocation.');
+                            }
+
                 </script>
                 <script async defer
                         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClf55i7ai_BLWi1C__3gJsbT6CsLNuzV4&callback=initMap">
