--- a/alt/index.html
+++ b/alt/index.html
@@ -84,39 +84,47 @@
                      <div id="map" style="width: 100%; height: 100%; position: absolute;">
                  <div id="map-canvas"></div>
      				</div>
-                    <script>
-                            var map;
-                            function initMap() {
-                            var mapDiv = document.getElementById('map');
-                            var map = new google.maps.Map(mapDiv, {
-                                center: {lat: 44.540, lng: -78.546},
-                                zoom: 8
-                            });
-							 google.maps.event.trigger(map, 'resize');
-                            // Try HTML5 geolocation.
-                            if (navigator.geolocation) {
-                                navigator.geolocation.getCurrentPosition(function(position) {
-                                    var pos = {
-                                        lat: position.coords.latitude,
-                                        lng: position.coords.longitude
-                                    };
-                                    infoWindow.setPosition(pos);
-                                    infoWindow.setContent('Location found.');
-                                    map.setCenter(pos);
-                                }, function() {
-                                    handleLocationError(true, infoWindow, map.getCenter());
-                                });
-                            } else {
-                            // Browser doesn't support Geolocation
-                            handleLocationError(false, infoWindow, map.getCenter());
-                        }
-                                // NOTE: This uses cross-domain XHR, and may not work on older browsers.
-                                map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
-                            }
-                </script>
-                <script async defer
-                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClf55i7ai_BLWi1C__3gJsbT6CsLNuzV4&callback=initMap">
-                </script>
+        <script>
+            var map;
+            function initMap() {
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    center: {lat: -34.397, lng: 150.644},
+                    zoom: 9
+                });
+                var infoWindow = new google.maps.InfoWindow({map: map});
+
+                // Try HTML5 geolocation.
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(function(position) {
+                        var pos = {
+                            lat: position.coords.latitude,
+                            lng: position.coords.longitude
+                        };
+
+                        infoWindow.setPosition(pos);
+                        infoWindow.setContent('Your Here.');
+                        map.setCenter(pos);
+                    }, function() {
+                        handleLocationError(true, infoWindow, map.getCenter());
+                    });
+                } else {
+                    // Browser doesn't support Geolocation
+                    handleLocationError(false, infoWindow, map.getCenter());
+                }     // NOTE: This uses cross-domain XHR, and may not work on older browsers.
+                map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
+            }
+
+            function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                infoWindow.setPosition(pos);
+                infoWindow.setContent(browserHasGeolocation ?
+                        'Error: The Geolocation service failed.' :
+                        'Error: Your browser doesn\'t support geolocation.');
+            }
+
+        </script>
+        <script async defer
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClf55i7ai_BLWi1C__3gJsbT6CsLNuzV4&callback=initMap">
+        </script>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
                     </div>
                 </div>
