--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <![endif]-->
     
     <!-- The Map stuff goes here -->
-    <style>
+    <!--<style>
       #map {
         width: 600px;
         height: 400px;
       }
-    </style>
+    </style>-->
 
 </head>
 
@@ -70,11 +70,11 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
+<!--    <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <!-- This is the script for the map -->
-                    <div id="map"></div>
+                    <div id="map" style="width: 100%; height: 90%; position: absolute; vertical-align:middle;">
                     <script>
                             var map;
                             function initMap() {
@@ -116,10 +116,10 @@
                 <script async defer
                         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClf55i7ai_BLWi1C__3gJsbT6CsLNuzV4&callback=initMap">
                 </script>
-            </div>
+<!--            </div>
         </div>
-        <!-- /.row -->
-    </div>
+-->        <!-- /.row -->
+   <!-- </div>-->
     <!-- /.container -->
 
 
