Add rate web page

--- a/alt/Rate.html
+++ b/alt/Rate.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="Rate.html">Rate</a>
+                        <a href="#">Rate</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
