preliminary add function

--- a/services.html
+++ b/services.html
@@ -68,8 +68,11 @@
                 <h1>The Big Picture</h1>
 		       
 		<form action="search.php" method="post">
-		Search: <input type="text" name="query"><br>
-		By: <select name="querytype">
+		Street Name: <input type="text" name="STREETNAME"><br>
+		Street Number: <input type="number" name="ADDRESSNUMBER"><br>
+		Zip Code: <input type="number" name="ZIP"><br>
+		Location Name: <input type="text" name="LOCATIONNAME"><br>
+		Rating: <select name="querytype">
 			<option value="" selected="selected"></option>
 			<option VALUE="STREETNAME">Street Name</option>
 			<option VALUE="ADDRESSNUMBER">Address Number</option>
