preliminary add function

--- a/services.html
+++ b/services.html
@@ -74,11 +74,11 @@
 		Location Name: <input type="text" name="LOCATIONNAME"><br>
 		Rating: <select name="querytype">
 			<option value="" selected="selected"></option>
-			<option VALUE="STREETNAME">Street Name</option>
-			<option VALUE="ADDRESSNUMBER">Address Number</option>
-			<option VALUE="ZIP">Zip code</option>
-			<option VALUE="LOCATIONNAME">Location</option>
-			<option VALUE="RATING">Rating</option>
+			<option VALUE="1">1</option>
+			<option VALUE="2">2</option>
+			<option VALUE="3">3</option>
+			<option VALUE="4">4</option>
+			<option VALUE="5">5</option>
 		</select>
 		<input type="submit">
 		</form>
