preliminary add function

--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
 		Street Number: <input type="number" name="ADDRESSNUMBER"><br>
 		Zip Code: <input type="number" name="ZIP"><br>
 		Location Name: <input type="text" name="LOCATIONNAME"><br>
-		Rating: <select name="querytype">
+		Rating: <select name="RATING">
 			<option value="" selected="selected"></option>
 			<option VALUE="1">1</option>
 			<option VALUE="2">2</option>
