--- a/services.html
+++ b/services.html
@@ -72,14 +72,7 @@
 		Street Number: <input type="number" name="ADDRESSNUMBER"><br>
 		Zip Code: <input type="number" name="ZIP"><br>
 		Location Name: <input type="text" name="LOCATIONNAME"><br>
-		Rating: <select name="RATING">
-			<option value="" selected="selected"></option>
-			<option VALUE="1">1</option>
-			<option VALUE="2">2</option>
-			<option VALUE="3">3</option>
-			<option VALUE="4">4</option>
-			<option VALUE="5">5</option>
-		</select>
+		Rating: <input type="number" name="RATING"><br>
 		<input type="submit">
 		</form>
 		
