--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The Big Picture - Start Bootstrap Template</title>
+    <title>Full - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/the-big-picture.css" rel="stylesheet">
+    <link href="css/full.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,21 +24,13 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
-    <!-- The Map stuff goes here -->
-    <!--<style>
-      #map {
-        width: 600px;
-        height: 400px;
-      }
-    </style>-->
 
 </head>
 
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -54,7 +46,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Rate</a>
+                        <a href="Rate.html">Rate</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
@@ -69,61 +61,52 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Page Content -->
-<!--    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-12">
-                <!-- This is the script for the map -->
-                    <div id="map" style="width: 100%; height: 90%; position: absolute; vertical-align:middle;">
-                    <script>
-                            var map;
-                            function initMap() {
-                                var map = new google.maps.Map(document.getElementById('map'), {
-                                    center: {lat: -34.397, lng: 150.644},
-                                    zoom: 9
-                                });
-                                var infoWindow = new google.maps.InfoWindow({map: map});
+    <!-- Put your page content here! -->
+    <div id="map" style="width: 100%; height: 94%; position: absolute; vertical-align:middle;">
+        <script>
+            var map;
+            function initMap() {
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    center: {lat: -34.397, lng: 150.644},
+                    zoom: 9
+                });
+                var infoWindow = new google.maps.InfoWindow({map: map});
 
-                                // Try HTML5 geolocation.
-                                if (navigator.geolocation) {
-                                    navigator.geolocation.getCurrentPosition(function(position) {
-                                        var pos = {
-                                            lat: position.coords.latitude,
-                                            lng: position.coords.longitude
-                                        };
+                // Try HTML5 geolocation.
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(function(position) {
+                        var pos = {
+                            lat: position.coords.latitude,
+                            lng: position.coords.longitude
+                        };
 
-                                        infoWindow.setPosition(pos);
-                                        infoWindow.setContent('Your Here.');
-                                        map.setCenter(pos);
-                                    }, function() {
-                                        handleLocationError(true, infoWindow, map.getCenter());
-                                    });
-                                } else {
-                                    // Browser doesn't support Geolocation
-                                    handleLocationError(false, infoWindow, map.getCenter());
-                                }     // NOTE: This uses cross-domain XHR, and may not work on older browsers.
-                                map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
+                        infoWindow.setPosition(pos);
+                        infoWindow.setContent('Your Here.');
+                        map.setCenter(pos);
+                    }, function() {
+                        handleLocationError(true, infoWindow, map.getCenter());
+                    });
+                } else {
+                    // Browser doesn't support Geolocation
+                    handleLocationError(false, infoWindow, map.getCenter());
+                }     // NOTE: This uses cross-domain XHR, and may not work on older browsers.
+                map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
+            }
 
-                            }
+            function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                infoWindow.setPosition(pos);
+                infoWindow.setContent(browserHasGeolocation ?
+                        'Error: The Geolocation service failed.' :
+                        'Error: Your browser doesn\'t support geolocation.');
+            }
+            function saveLocationDB(){
 
-                            function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-                                infoWindow.setPosition(pos);
-                                infoWindow.setContent(browserHasGeolocation ?
-                                        'Error: The Geolocation service failed.' :
-                                        'Error: Your browser doesn\'t support geolocation.');
-                            }
+            }
 
-                </script>
-                <script async defer
-                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClf55i7ai_BLWi1C__3gJsbT6CsLNuzV4&callback=initMap">
-                </script>
-<!--            </div>
-        </div>
--->        <!-- /.row -->
-   <!-- </div>-->
-    <!-- /.container -->
-
-
+        </script>
+        <script async defer
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClf55i7ai_BLWi1C__3gJsbT6CsLNuzV4&callback=initMap">
+        </script>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
