Added Form for database in Rate.html

--- a/Rate.html
+++ b/Rate.html
@@ -61,6 +61,28 @@
         <!-- /.container -->
     </nav>
 
+    <div class="container" >
+        <div class="row">
+            <div class="col-md-6 col-sm-12">
+                <h1>The Big Picture</h1>
+
+                <form action="search.php" method="post">
+                    Street Name: <input type="text" name="STREETNAME"><br>
+                    Street Number: <input type="number" name="ADDRESSNUMBER"><br>
+                    Zip Code: <input type="number" name="ZIP"><br>
+                    Location Name: <input type="text" name="LOCATIONNAME"><br>
+                    Rating: <input type="number" name="RATING"><br>
+                    <input type="submit">
+                </form>
+
+
+
+
+            </div>
+        </div>
+        <!-- /.row -->
+    </div>
+
     <!-- Put your page content here! -->
     <div id="map" style="width: 100%; height: 94%; position: absolute; vertical-align:middle;">
         <script async defer
