Designed front end for rate page

--- a/Rate.html
+++ b/Rate.html
@@ -67,12 +67,37 @@
                 <h1>The Big Picture</h1>
 
                 <form action="search.php" method="post">
-                    Street Name: <input type="text" name="STREETNAME"><br>
-                    Street Number: <input type="number" name="ADDRESSNUMBER"><br>
-                    Zip Code: <input type="number" name="ZIP"><br>
-                    Location Name: <input type="text" name="LOCATIONNAME"><br>
-                    Rating: <input type="number" name="RATING"><br>
-                    <input type="submit">
+                  <table width="100%" border="0">
+                  
+                    <caption>&nbsp;
+                    </caption>
+                      <tbody>
+                        <tr>
+                          <td width="109"><div align="right">Street Name:</div></td>
+                          <td width="375"><input type="text" name="STREETNAME"></td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">Street Number:</div></td>
+                          <td><input type="number" name="ADDRESSNUMBER"></td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">Zip Code:</div></td>
+                          <td><input type="number" name="ZIP"></td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">Location Name:</div></td>
+                          <td><input type="text" name="LOCATIONNAME"></td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">Rating: </div></td>
+                          <td><input type="number" name="RATING"></td>
+                        </tr>
+                      </tbody>
+                  </table>
+                  <p><br>
+                      <input type="submit">
+                  </p>
+                    <p>&nbsp;</p>
                 </form>
 
 
