--- a/Rate.html
+++ b/Rate.html
@@ -64,7 +64,7 @@
     <div class="container" >
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>The Big Picture</h1>
+                <h1>Rate A Location</h1>
 
                 <form action="search.php" method="post">
                   <table width="100%" border="0">
