--- a/Rate.html
+++ b/Rate.html
@@ -74,23 +74,23 @@
                       <tbody>
                         <tr>
                           <td width="109"><div align="right">Street Name:</div></td>
-                          <td width="375"><input type="text" name="STREETNAME"></td>
+                          <td width="375"><input name="STREETNAME" type="text" required></td>
                         </tr>
                         <tr>
                           <td><div align="right">Street Number:</div></td>
-                          <td><input type="number" name="ADDRESSNUMBER"></td>
+                          <td><input name="ADDRESSNUMBER" type="number" required></td>
                         </tr>
                         <tr>
                           <td><div align="right">Zip Code:</div></td>
-                          <td><input type="number" name="ZIP"></td>
+                          <td><input name="ZIP" type="number" required max="99999" min="10000"></td>
                         </tr>
                         <tr>
                           <td><div align="right">Location Name:</div></td>
-                          <td><input type="text" name="LOCATIONNAME"></td>
+                          <td><input name="LOCATIONNAME" type="text" required></td>
                         </tr>
                         <tr>
                           <td><div align="right">Rating: </div></td>
-                          <td><input type="number" name="RATING"></td>
+                          <td><input name="RATING" type="number" required max="5" min="0"></td>
                         </tr>
                       </tbody>
                   </table>
