--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
         <script>
             var map;
             function initMap() {
+                var latLng = new google.maps.LatLng(-82.50389099121094, 27.940426898126454);
+
                 var map = new google.maps.Map(document.getElementById('map'), {
-                    center: {lat: -34.397, lng: 150.644},
-                    zoom: 9
+                    center: {lat: -82.57, lng: 27.94},
+                    zoom: 12,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
                 });
 
 
