--- a/index.html
+++ b/index.html
@@ -67,12 +67,25 @@
             var map;
             function initMap() {
                 var latLng = new google.maps.LatLng(-82.50389099121094, 27.940426898126454);
+                var homeLatLng = new google.maps.LatLng(-82.50389099121094, 27.940426898126454);
 
                 var map = new google.maps.Map(document.getElementById('map'), {
                     center: {lat: -82.57, lng: 27.94},
                     zoom: 12,
                     mapTypeId: google.maps.MapTypeId.ROADMAP
                 });
+
+                var marker1 = new MarkerWithLabel({
+                    position: homeLatLng,
+                    draggable: true,
+                    raiseOnDrag: true,
+                    map: map,
+                    labelContent: "$425K",
+                    labelAnchor: new google.maps.Point(22, 0),
+                    labelClass: "labels", // the CSS class for the label
+                    labelStyle: {opacity: 0.75},
+                });
+
 
 
                 var infoWindow = new google.maps.InfoWindow({map: map});
