--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
                         <a href="Rate.html">Rate</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
