--- a/Rate.html
+++ b/Rate.html
@@ -110,20 +110,21 @@
 
     function getLocation() {
     // Try HTML5 geolocation.
-    if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(function(position) {
-
-    var latitude = position.coords.latitude;
-    var longitude = position.coords.longitude;
-        $.post('search.php', {LATITUDE: latitude});
-        $.post('search.php', {LONGITUDE: longitude});
-
-    }, function() {
-    handleLocationError(true, infoWindow, map.getCenter());
-    });
+    if (!navigator.geolocation) {
+        // Browser doesn't support Geolocation
+        handleLocationError(false, infoWindow, map.getCenter());
     } else {
-    // Browser doesn't support Geolocation
-    handleLocationError(false, infoWindow, map.getCenter());
+        navigator.geolocation.getCurrentPosition(function (position) {
+
+            var latitude = position.coords.latitude;
+            var longitude = position.coords.longitude;
+            $.post("search.php", {LATITUDE: latitude});
+            $.post("search.php", {LONGITUDE: longitude});
+
+
+        }, function () {
+            handleLocationError(true, infoWindow, map.getCenter());
+        });
     }     // NOTE: This uses cross-domain XHR, and may not work on older browsers.
     map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
     }
