--- a/Rate.html
+++ b/Rate.html
@@ -91,12 +91,13 @@
                         </tr>
                       </tbody>
                   </table>
+                    <input type="hidden" name="LATITUDE" id="LATITUDE">
+                    <input type="hidden" name="LONGITUDE" id="LONGITUDE">
                   <p><br>
                       <input type="submit">
                   </p>
                     <p>&nbsp;</p>
-                    <input type="hidden" name="LATITUDE" id="LATITUDE">
-                    <input type="hidden" name="LONGITUDE" id="LONGITUDE">
+
                 </form>
 
 
@@ -112,16 +113,15 @@
 
         function getLocation() {
     // Try HTML5 geolocation.
-            $.post = function (s, param2) {
-                
-            };
+
             if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(function (position) {
 
-            var latitude = position.coords.latitude;
-            var longitude = position.coords.longitude;
-            $.post('search.php', {LATITUDE: latitude});
-            $.post('search.php', {LONGITUDE: longitude});
+            var latitude = document.getElementById("LATITUDE");
+            latitude = position.coords.latitude;
+            var longitude =  document.getElementById("LONGITUDE")
+            longitude = position.coords.longitude;
+
 
 
         }, function () {
