--- a/index.html
+++ b/index.html
@@ -60,18 +60,17 @@
 
     <!-- Put your page content here! -->
     <div id="map" style="width: 100%; height: 94%; position: absolute; vertical-align:middle;">
+        <div id="map" style="width: 100%; height: 94%; position: absolute; vertical-align:middle;">
         <script>
             var map;
             function initMap() {
                 var latLng = new google.maps.LatLng(-82.50389099121094, 27.940426898126454);
                 var homeLatLng = new google.maps.LatLng(-82.50389099121094, 27.940426898126454);
-
                 var map = new google.maps.Map(document.getElementById('map'), {
-                    center: {lat: 27.988156, lng: -82.328775},
+                    center: {lat: -82.57, lng: 27.94},
                     zoom: 12,
                     mapTypeId: google.maps.MapTypeId.ROADMAP
                 });
-
                 var marker1 = new MarkerWithLabel({
                     position: homeLatLng,
                     draggable: true,
@@ -82,11 +81,7 @@
                     labelClass: "labels", // the CSS class for the label
                     labelStyle: {opacity: 0.75},
                 });
-
-
-
                 var infoWindow = new google.maps.InfoWindow({map: map});
-
                 // Try HTML5 geolocation.
                 if (navigator.geolocation) {
                     navigator.geolocation.getCurrentPosition(function(position) {
@@ -94,7 +89,6 @@
                             lat: position.coords.latitude,
                             lng: position.coords.longitude
                         };
-
                         infoWindow.setPosition(pos);
                         infoWindow.setContent('Your Here.');
                         map.setCenter(pos);
@@ -107,7 +101,6 @@
                 }     // NOTE: This uses cross-domain XHR, and may not work on older browsers.
                 map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
             }
-
             function handleLocationError(browserHasGeolocation, infoWindow, pos) {
                 infoWindow.setPosition(pos);
                 infoWindow.setContent(browserHasGeolocation ?
@@ -115,9 +108,7 @@
                         'Error: Your browser doesn\'t support geolocation.');
             }
             function saveLocationDB(){
-
             }
-
         </script>
         <script async defer
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClf55i7ai_BLWi1C__3gJsbT6CsLNuzV4&callback=initMap">
