template contact page

--- a/contact.html
+++ b/contact.html
@@ -61,46 +61,10 @@
     <div class="container" >
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>Rate A Location</h1>
-
-                <form action="search.php" method="post">
-                  <table width="100%" border="0">
-                  
-                    <caption>&nbsp;
-                    </caption>
-                      <tbody>
-                        <tr>
-                          <td width="109"><div align="right">Street Name:</div></td>
-                          <td width="375"><input name="STREETNAME" type="text" required></td>
-                        </tr>
-                        <tr>
-                          <td><div align="right">Street Number:</div></td>
-                          <td><input name="ADDRESSNUMBER" type="number" required></td>
-                        </tr>
-                        <tr>
-                          <td><div align="right">Zip Code:</div></td>
-                          <td><input name="ZIP" type="number" required max="99999" min="10000"></td>
-                        </tr>
-                        <tr>
-                          <td><div align="right">Location Name:</div></td>
-                          <td><input name="LOCATIONNAME" type="text" required></td>
-                        </tr>
-                        <tr>
-                          <td><div align="right">Rating: </div></td>
-                          <td><input name="RATING" type="number" required max="5" min="0"></td>
-                        </tr>
-                      </tbody>
-                  </table>
-                    <input type="hidden" name="LATITUDE" id="lat">
-                    <input type="hidden" name="LONGITUDE" id="long">
-                  <p><br>
-                      <input type="submit">
-                  </p>
-                    <p>&nbsp;</p>
-
-                </form>
-
-
+                <h1>Contact</h1>
+                
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+</p>
 
 
             </div>
