--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
                     center: {lat: 27.988156, lng: -82.328775},
                     zoom: 9
                 });
+
+                var myLatLng = {lat: 27.9, lng: -82.328775};
+
+                // Create a marker and set its position.
+                var marker = new google.maps.Marker({
+                    map: map,
+                    position: myLatLng,
+                    title: 'Hello World!'
+                });
+
                 var infoWindow = new google.maps.InfoWindow({map: map});
                 // Try HTML5 geolocation.
                 if (navigator.geolocation) {
