--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     zoom: 9
                 });
 
-                var myLatLng = {lat: 27.9, lng: -82.328775};
+                var myLatLng = {lat: 28, lng: -82;
 
                 // Create a marker and set its position.
                 var marker = new google.maps.Marker({
