add options to rate

--- a/Rate.html
+++ b/Rate.html
@@ -89,6 +89,72 @@
                           <td><div align="right">Rating: </div></td>
                           <td><input name="RATING" type="number" required max="5" min="0"></td>
                         </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="RAMPS" value="Bike">
+                          </div></td>
+                          <td>Are there adequate ramps?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="THEIGHTS" value="Bike">
+                          </div></td>
+                          <td>Are the tables adequately high?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="BATHROOM" value="Bike">
+                          </div></td>
+                          <td>Is the bathroom accessible?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="POOLLIFTS" value="Bike">
+                          </div></td>
+                          <td>Are there pool lifts? </td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="RESTAURANT" value="Bike">
+                          </div></td>
+                          <td>Is the restaurant accessible?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="CURBS" value="Bike">
+                          </div></td>
+                          <td>Are there curbs?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="SHUTTLE" value="Bike">
+                          </div></td>
+                          <td>Is there shuttle access available?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="LIFTS" value="Bike">
+                          </div></td>
+                          <td>Are there transportation lifts?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="VELCRO" value="Bike">
+                          </div></td>
+                          <td>Is there velcro?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="TEMP" value="Bike">
+                          </div></td>
+                          <td>Can temperature be easily controlled?</td>
+                        </tr>
+                        <tr>
+                          <td><div align="right">
+                            <input type="checkbox" name="DWIDTH" value="Bike">
+                          </div></td>
+                          <td>Are doors adequately wide?</td>
+                        </tr>
                       </tbody>
                   </table>
                   <p><br>
