--- a/services.html
+++ b/services.html
@@ -73,6 +73,18 @@
 		Zip Code: <input type="number" name="ZIP"><br>
 		Location Name: <input type="text" name="LOCATIONNAME"><br>
 		Rating: <input type="number" name="RATING"><br>
+		<input type="checkbox" name="RAMPS" value="Bike"> Are there adequate ramps?<br>
+		<input type="checkbox" name="THEIGHTS" value="Bike"> Are the tables adequately high?<br>
+		<input type="checkbox" name="BATHROOM" value="Bike"> Is the bathroom accessible?<br>
+		<input type="checkbox" name="POOLLIFTS" value="Bike"> Are there pool lifts? <br>
+		<input type="checkbox" name="RESTAURANT" value="Bike"> Is the restaurant accessible?<br>
+		<input type="checkbox" name="CURBS" value="Bike"> Are there curbs?<br>
+		<input type="checkbox" name="SHUTTLE" value="Bike"> Is there shuttle access available?<br>
+		<input type="checkbox" name="LIFTS" value="Bike"> Are there transportation lifts?<br>
+		<input type="checkbox" name="VELCRO" value="Bike"> Is there velcro?<br>
+		<input type="checkbox" name="TEMP" value="Bike"> Can temperature be easily controlled?<br>
+		<input type="checkbox" name="DWIDTH" value="Bike"> Are doors adequately wide?<br>
+
 		<input type="submit">
 		</form>
 		
