--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                     mapTypeId: google.maps.MapTypeId.ROADMAP
                 });
 
+                var marker = new google.maps.Marker({
+                });
+
                 var infoWindow = new google.maps.InfoWindow({map: map});
 
                 // Try HTML5 geolocation.
